# lilnas

./: Cargo.toml  Makefile.toml  README.md
lilnas_server/: .gitignore  Cargo.toml  build.rs
lilnas_server/go/: go.mod  main.go
lilnas_server/go_build/: libnas.h
lilnas_server/rust/src/: main.rs
lilnas_server_ui/: Cargo.toml
lilnas_server_ui/src/: args.rs  config.rs  main.rs
src/: args.rs  macros.rs  main.rs
