[package]
name = "lilnas_server_ui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}
dirs = "1.0.5"
toml = "0.5.8"
once_cell = "1.8.0"
parking_lot = "0.12"
color-eyre = "0.6"
owo-colors = "3.4"
bcrypt = "0.13"
base64 = "0.13"
log = "0.4.8"
simple_logger = "2.1"
rpassword = "6.0.1"
rand = "0.8.4"
clap = {version = "3.2.6", features = ["derive"]}
